--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -22,20 +21,21 @@ body {
 }
 .logo {
     margin-right: auto;
+    padding-right: 1200px;
 }
 .side {
-    width: 250px;
+    width:700px;
 }
 .flex {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 nav,
 .footer .flex-item {
     height: 100px;
 }
 .flex-nav {
-    padding: 0 80px;
+    padding: 10 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,3 +51,4 @@ nav,
 .last {
     margin-right: auto !important;
 }
+
